# java-junit-sample

./: .gitignore  WORKSPACE  java_test_disco.bzl  pom.xml  third_party.bzl
java-junit-sample/: BUILD.bazel  MANIFEST.MF
java-junit-sample/src/main/java/com/codecentric/sample/: BUILD.bazel
java-junit-sample/src/main/java/com/codecentric/sample/store/model/: BUILD.bazel
java-junit-sample/src/main/java/com/codecentric/sample/store/repository/: BUILD.bazel
java-junit-sample/src/main/java/com/codecentric/sample/store/service/: BUILD.bazel
java-junit-sample/src/main/java/com/codecentric/sample/store/service/tools/: BUILD.bazel
java-junit-sample/src/test/java/com/codecentric/sample/store/service/: AllTests.java  BUILD.bazel
tools/build_rules/: prelude_bazel
tools/java_test_discovery/: BUILD.bazel  Classpath.java  ClasspathSuite.java  CustomSuite.java  TestSuiteBuilder.java
