package(default_visibility = ["//visibility:public"])
load("@rules_jvm_test_discovery//:java_test_discovery.bzl", "java_test_discovery")

java_library(
    name = "service_Source",
    srcs = ["//java-junit-sample/src/test/java/com/codecentric/sample/store/service:sources",],
    deps = [
        "//java-junit-sample/src/main/java/com/codecentric/sample/store/model:model" , 
        "//java-junit-sample/src/main/java/com/codecentric/sample/store/repository:repository" , 
        "//java-junit-sample/src/main/java/com/codecentric/sample/store/service/external:external" , 
        "//java-junit-sample/src/main/java/com/codecentric/sample/store/service/tools:tools" , 
        "//java-junit-sample/src/main/java/com/codecentric/sample/store/service:service" , 
        "//java-junit-sample:tests_dependencies"
    ],
    testonly = 1,
)

java_test_discovery(
    name = "service",
    tests_from = [":service_Source"],
    size = "small",
    print_discovered_classes = True,
    suffixes = ["Test"],
    data = ["//java-junit-sample:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //java-junit-sample:coordinates)"],
    testonly = 1,
)

sources()
